z-index fixes on pager current and ajax-progress

--- a/sites/all/themes/occupy_directory/css/global.css
+++ b/sites/all/themes/occupy_directory/css/global.css
@@ -553,6 +553,7 @@ ul.pager li+li {
 
 ul.pager li .ajax-progress {
   position: absolute;
+  z-index: 5;
   background-position: none;
   border-radius: 12px;
   top: -.25em;
@@ -625,7 +626,7 @@ ul.pager li .ajax-progress .throbber{
   width: 24px;
   height: 24px;
   margin: 0;
-  z-index: 100;
+  z-index: 4;
   text-decoration: none;
   border-radius: 12px;
   background: #000;
